force-app/main/default/objects/Unidade__c/Unidade__c.object-meta.xml
<CustomObject>
    <label>Unidade</label>
    <nameField>
        <label>Unidade Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unidades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>