force-app/main/default/objects/Unidade__c/fields/Alugado__c.field-meta.xml
<CustomField>
    <fullName>Alugado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alugado</label>
    <type>Checkbox</type>
</CustomField>