force-app/main/default/objects/Unidade__c/fields/Apto__c.field-meta.xml
<CustomField>
    <fullName>Apto__c</fullName>
    <label>Apto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>