force-app/main/default/objects/Unidade__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Área(m²)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>