force-app/main/default/objects/Unidade__c/fields/Edificio__c.field-meta.xml
<CustomField>
    <fullName>Edificio__c</fullName>
    <label>Edificio</label>
    <referenceTo>Edificio__c</referenceTo>
    <relationshipLabel>Unidades</relationshipLabel>
    <relationshipName>Unidades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>