force-app/main/default/objects/Unidade__c/fields/Edificiouniao__c.field-meta.xml
<CustomField>
    <fullName>Edificiouniao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Edificiouniao</label>
    <referenceTo>Edificio__c</referenceTo>
    <relationshipLabel>Unidades (Edificiouniao)</relationshipLabel>
    <relationshipName>Unidades1</relationshipName>
    <type>Lookup</type>
</CustomField>