force-app/main/default/objects/Unidade__c/fields/Locador__c.field-meta.xml
<CustomField>
    <fullName>Locador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Unidades</relationshipLabel>
    <relationshipName>Unidades</relationshipName>
    <type>Lookup</type>
</CustomField>