force-app/main/default/objects/Unidade__c/fields/Tipo_Loca_o__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Loca_o__c</fullName>
    <label>Tipo Locação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Temporada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>