force-app/main/default/objects/Unidade__c/fields/Valor_Aluguel__c.field-meta.xml
<CustomField>
    <fullName>Valor_Aluguel__c</fullName>
    <label>Valor Aluguel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>