force-app/main/default/objects/Unidade__c/listViews/Lista_Copa.listView-meta.xml
<ListView>
    <fullName>Lista_Copa</fullName>
    <columns>NAME</columns>
    <columns>Edificio__c</columns>
    <columns>Alugado__c</columns>
    <columns>Apto__c</columns>
    <filterScope>Mine</filterScope>
    <label>Lista Copa</label>
</ListView>